# rust-protobuf-example

./: Cargo.toml  build.rs
src/: lib.rs  main.rs  message.proto
