[package]
name = "rust-grpc-example"
version = "0.1.0"
authors = ["adselvar <adhita94@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.6"
# Only necessary if using Protobuf well-known types:
prost-types = "0.6"

[build-dependencies]
prost-build = { version = "0.6" }
